--- a/app/modules/transit/css/touch.css
+++ b/app/modules/transit/css/touch.css
@@ -13,7 +13,11 @@
 }
 
 #stops {
-  margin: 0px -0.75em;
+  margin: 0px -0.5em;
+}
+#stops .results {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #listView li.icon {
